--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-dom": "^18",
     "react-top-loading-bar": "^2.3.1",
     "rehype-autolink-headings": "^7.1.0",
+    "rehype-document": "^7.0.3",
+    "rehype-format": "^5.0.1",
     "rehype-highlight": "^7.0.0",
     "rehype-pretty-code": "^0.13.2",
     "rehype-raw": "^7.0.0",
