--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@rehype-pretty/transformers": "^0.13.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.6.2",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
